// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > locations > StoreList > StoreDistance should render when a unit system is set 1`] = `
<span
  className="css-12obfh7"
>
  5.4 imperial
</span>
`;

exports[`engage > locations > StoreList > StoreDistance should render when the distance is 0 1`] = `
<span
  className="css-12obfh7"
>
  0 metric
</span>
`;
